force-app/main/default/objects/ClaimProvider__c/ClaimProvider__c.object-meta.xml
<CustomObject>
    <description>Represents information about a provider of a service, equipment or medication. </description>
    <label>ClaimProvider</label>
    <nameField>
        <label>Provider</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClaimProvider</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>