force-app/main/default/objects/ClaimProvider__c/fields/ProviderNPI__c.field-meta.xml
<CustomField>
    <fullName>ProviderNPI__c</fullName>
    <inlineHelpText>National Provider Identifier (NPI) identification number.</inlineHelpText>
    <label>ProviderNPI</label>
    <length>32</length>
    <type>Text</type>
</CustomField>