force-app/main/default/objects/ClaimProvider__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Indicates whether the provider is the rendering provider, service provider, or billing provider.</inlineHelpText>
    <label>Role</label>
    <length>32</length>
    <type>Text</type>
</CustomField>